tests/parse_print/parsing04/stderr.expected
Error:
    tests/parse_print/parsing04/parsing04.essence:1:17:
  |
1 | find x: int(1..3x)
  |                 ^
Error: Symbol not found "x"

tests/parse_print/parsing04/parsing04.essence:1:17:
  |
1 | find x: int(1..3x)
  |                 ^
Missing ,
